// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle Snapshots renders as expected 1`] = `
.emotion-2 {
  width: 32px;
  height: 16px;
  background-color: #dfe2e6;
  border-radius: 100px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: background-color 0.25s linear;
  transition: background-color 0.25s linear;
  padding: 0px 2px;
  box-sizing: border-box;
}

.emotion-3 {
  display: inline-block;
}

.emotion-1 {
  width: 12px;
  height: 12px;
  border-radius: 100px;
  box-shadow: 0 2px 4px 0 rgba(82,97,115,0.14);
  background-color: #ffffff;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  -webkit-transition: -webkit-transform 0.25s linear;
  -webkit-transition: transform 0.25s linear;
  transition: transform 0.25s linear;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
}

<label
  className="emotion-3"
>
  <input
    className="emotion-0"
    defaultChecked={false}
    onChange={[Function]}
    tabIndex={0}
    type="checkbox"
  />
  <div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    />
  </div>
</label>
`;

exports[`Toggle Snapshots renders toggle on 1`] = `
.emotion-3 {
  display: inline-block;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
}

.emotion-2 {
  width: 32px;
  height: 16px;
  background-color: #dfe2e6;
  border-radius: 100px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: background-color 0.25s linear;
  transition: background-color 0.25s linear;
  padding: 0px 2px;
  box-sizing: border-box;
  background-color: #005cb9;
}

.emotion-1 {
  width: 12px;
  height: 12px;
  border-radius: 100px;
  box-shadow: 0 2px 4px 0 rgba(82,97,115,0.14);
  background-color: #ffffff;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  -webkit-transition: -webkit-transform 0.25s linear;
  -webkit-transition: transform 0.25s linear;
  transition: transform 0.25s linear;
  -webkit-transform: translateX(16px);
  -ms-transform: translateX(16px);
  transform: translateX(16px);
}

<label
  className="emotion-3"
>
  <input
    className="emotion-0"
    defaultChecked={true}
    onChange={[Function]}
    tabIndex={0}
    type="checkbox"
  />
  <div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    />
  </div>
</label>
`;

exports[`Toggle Snapshots renders toggle with different background color 1`] = `
.emotion-3 {
  display: inline-block;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
}

.emotion-1 {
  width: 12px;
  height: 12px;
  border-radius: 100px;
  box-shadow: 0 2px 4px 0 rgba(82,97,115,0.14);
  background-color: #ffffff;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  -webkit-transition: -webkit-transform 0.25s linear;
  -webkit-transition: transform 0.25s linear;
  transition: transform 0.25s linear;
  -webkit-transform: translateX(16px);
  -ms-transform: translateX(16px);
  transform: translateX(16px);
}

.emotion-2 {
  width: 32px;
  height: 16px;
  background-color: #dfe2e6;
  border-radius: 100px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: background-color 0.25s linear;
  transition: background-color 0.25s linear;
  padding: 0px 2px;
  box-sizing: border-box;
  background-color: #000;
}

<label
  className="emotion-3"
>
  <input
    className="emotion-0"
    defaultChecked={true}
    onChange={[Function]}
    tabIndex={0}
    type="checkbox"
  />
  <div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    />
  </div>
</label>
`;
